--- a/.github/workflows/reusable-acceptance.yml
+++ b/.github/workflows/reusable-acceptance.yml
@@ -20,6 +20,9 @@ on:
       gotestsum-version:
         required: true
         type: string
+    secrets:
+        CONSUL_ENT_LICENSE:
+          required: true
 
 # Environment variables can only be used at the step level
 env:
@@ -29,7 +32,7 @@ env:
 jobs:
   a:
     runs-on: ubuntu-latest
-    strategy:
+    strategy: 
       matrix:
         include: # I am really sorry for this but I could not find a way to automatically split our tests into several runners. For now, split manually.
           - {runner: "1", test-packages: "basic cli connect consul-dns controller"}
