--- a/.github/workflows/reusable-acceptance.yml
+++ b/.github/workflows/reusable-acceptance.yml
@@ -39,12 +39,11 @@ jobs:
     strategy: 
       matrix:
         include: # I am really sorry for this but I could not find a way to automatically split our tests into several runners. For now, split manually.
-          - {runner: "1", test-packages: "basic connect"}
-          - {runner: "2", test-packages: "consul-dns controller example"}
-          - {runner: "3", test-packages: "example ingress-gateway mesh-gateway"}
-          - {runner: "4", test-packages: "mesh-gateway metrics"}
-          - {runner: "5", test-packages: "partitions sync"}
-          - {runner: "6", test-packages: "terminating-gateway vault"}
+          - {runner: "0", test-packages: "basic connect consul-dns"}
+          - {runner: "1", test-packages: "controller example ingress-gateway"}
+          - {runner: "2", test-packages: "mesh-gateway metrics"}
+          - {runner: "3", test-packages: "partitions sync terminating-gateway"}
+          - {runner: "4", test-packages: "vault"}
 
 #TODO: set back to true
       fail-fast: false
