Try to upload test report

--- a/.github/workflows/reusable-acceptance.yml
+++ b/.github/workflows/reusable-acceptance.yml
@@ -110,4 +110,9 @@ jobs:
           done
             gotestsum --raw-command --junitfile "${{ env.TEST_RESULTS }}/gotestsum-report.xml" -- cat jsonfile*
           exit $exit_code
-
+    
+      - name: Upload tests
+      - uses: actions/upload-artifact@v2
+        with:
+          name: gotestsum-report.xml
+          path: ${{ env.TEST_RESULTS }}/gotestsum-report.xml
