try out vault test fix and always run test uploads

--- a/.github/workflows/reusable-acceptance.yml
+++ b/.github/workflows/reusable-acceptance.yml
@@ -112,6 +112,7 @@ jobs:
           exit $exit_code
     
       - name: Upload tests
+        if: always()
         uses: actions/upload-artifact@v2
         with:
           name: gotestsum-report.xml
