upload debug info

--- a/.github/workflows/reusable-acceptance.yml
+++ b/.github/workflows/reusable-acceptance.yml
@@ -116,5 +116,13 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: ${{ matrix.packages }}-gotestsum-report.xml
+          name: ${{ matrix.test-packages }}-gotestsum-report.xml
           path: ${{ env.TEST_RESULTS }}/gotestsum-report.xml
+
+      - name: Upload debug (on failure) 
+        if: failure()
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ matrix.test-packages }}-debug-info
+          path: ${{ env.TEST_RESULTS }}/debug
+
